реализован функционал регистрации пользователя
