# src/api/routes/public_api.go
@@ -1,0 +1,16 @@
+package routes
+
+import (
+	"github.com/gin-gonic/gin"
+	"social/api/handlers"
+)
+
+func PublicApi(router *gin.Engine) *gin.RouterGroup {
+	publicEndpoints := router.Group("/api/v1/")
+	{
+		publicEndpoints.POST("auth/register", handlers.Register)
+		publicEndpoints.POST("auth/login", handlers.Login)
+		publicEndpoints.POST("auth/logout", handlers.Logout)
+	}
+	return publicEndpoints
+}
